--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 MONGO_URI = mongodb+srv://tanlagi:Kocanbiet1@cluster0.jl3qcmp.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = asldhasljd
+NODE_ENV = production
